feat: BookEntity拡張
