# spec/openapi.yaml
@@ -7,9 +7,20 @@ components:
       enum:
       - +price
       - -price
+    BookStatus:
+      type: string
+      enum:
+      - UNPUBLISHED
+      - PUBLISHED
+      - OUT_OF_PRINT
     Hit:
       type: object
       properties:
+        id:
+          type: integer
+          format: int64
+          examples:
+          - 1
         isbn:
           type: string
           examples:
@@ -23,6 +34,11 @@ components:
           format: int32
           examples:
           - 4400
+        status:
+          type: string
+          examples:
+          - PUBLISHED
+          $ref: "#/components/schemas/BookStatus"
     Pagination:
       type: object
       properties:
@@ -77,8 +93,8 @@ paths:
         schema:
           type: integer
           format: int32
-          minimum: 1
-          default: "1"
+          minimum: 0
+          default: "0"
       - name: order
         in: query
         schema:
