# src/main/java/dev/ymkz/gateway/datasource/BookEntity.java
@@ -1,11 +1,40 @@
 package dev.ymkz.gateway.datasource;
 
 import dev.ymkz.domain.model.Book;
-import dev.ymkz.domain.value.Isbn13;
+import dev.ymkz.domain.value.BookStatus;
+import dev.ymkz.domain.value.Isbn;
+import jakarta.annotation.Nullable;
+import java.time.LocalDateTime;
 
-public record BookEntity(int id, String isbn, String title, int price) {
+public record BookEntity(
+    long id,
+    String isbn,
+    String title,
+    @Nullable Integer price,
+    BookStatus status,
+    int authorId,
+    String authorName,
+    int publisherId,
+    String publisherName,
+    @Nullable LocalDateTime publishedAt,
+    LocalDateTime createdAt,
+    @Nullable LocalDateTime updatedAt,
+    @Nullable LocalDateTime deletedAt) {
 
   public static Book toBook(BookEntity entity) {
-    return new Book(new Isbn13(entity.isbn()), entity.title(), entity.price());
+    return new Book(
+        entity.id,
+        new Isbn(entity.isbn),
+        entity.title,
+        entity.price,
+        entity.status,
+        entity.authorId,
+        entity.authorName,
+        entity.publisherId,
+        entity.publisherName,
+        entity.publishedAt,
+        entity.createdAt,
+        entity.updatedAt,
+        entity.deletedAt);
   }
 }
